--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darshan's Personal Site</title>
 </head>
+
 <body>
-    
+
     <!-- <img src="https://pbs.twimg.com/profile_images/1508872100714475522/f9Gmbg6g_400x400.jpg" alt="Darshan_Profile_Image"> -->
 
     <!-- To crop image to circle visit website: crop-circle.onlineimage.co -->
 
-    <img src="images/darshan_profile_picture_modified.png" alt="Darshan_Profile_Image">
-    <h1>Darshan Ghorpade</h1>
-    <p><em>A Mathematician and <strong>Technology Enthusiast</strong>.</em></p>
-    <p>I am a Web Developer. I ❤️ coffee and my own beers.</p>
+    <table cellspacing="20">
+        <tr>
+            <td>
+                <img src="images/darshan_profile_picture_modified.png" alt="Darshan_Profile_Image">
+            </td>
+            <td>
+                <h1>Darshan Ghorpade</h1>
+                <p><em>A Mathematician and <strong>Technology Enthusiast</strong>.</em></p>
+                <p>I am a Web Developer. I ❤️ coffee and my own beers.</p>
+            </td>
+        </tr>
+    </table>
+
     <hr>
     <h3>Fields of Interest</h3>
     <ul>
@@ -23,8 +34,77 @@
         <li>Mobile Application Development</li>
     </ul>
 
+    <h3>Work Experience</h3>
+    <!-- <p>2021-2021 Web Developer at suvidha Foundation</p> -->
+    <table>
+        <thead>
+            <tr>
+                <th>Dates</th>
+                <th>Work</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>September 2021 - October 2021</td>
+                <td>Web Developer at suvidha Foundation</td>
+            </tr>
+            <tr>
+                <td>November 2021 - December 2021</td>
+                <td>Web Developer at Bhaktivedanta institute for science and spirituality</td>
+            </tr>
+        </tbody>
+        <tfoot>
+
+        </tfoot>
+    </table>
+    <hr>
+
+    <h3>Skills</h3>
+
+    <table cellspacing="10">
+        <tr>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>Web Development</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>C Programming</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Photography</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
+            <td>
+                <table cellspacing="10">
+                    <tr>
+                        <td>C++ Programming</td>
+                        <td>⭐⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Java Programming</td>
+                        <td>⭐⭐⭐</td>
+                    </tr>
+                    <tr>
+                        <td>Python Programming</td>
+                        <td>⭐⭐</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+
+    <hr>
+
     <a href="hobbies.html">My Hobbies</a>
     <a href="contactme.html">Contact Me</a>
 
 </body>
+
 </html>
