--- a/HTML-Personal Site/contactme.html
+++ b/HTML-Personal Site/contactme.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <h3>My Contact Details</h3>
+    <p>My Fictional Address</p>
     <p><a href="mailto:mr.darshanghorpade@gmail.com">mr.darshanghorpade@gmail.com</a></p>
     <p><a href="tel:+91 9834754828">+91 9834754828</a></p>
+
+    <form class="" action="mailto:mr.darshanghorpade@gmail.com" method="post" enctype="text/plain">
+        <label for="name">Your Name:</label>
+        <input type="text" name="" id=""><br>
+        <label for="email">Your Email:</label>
+        <input type="email" name="" id=""><br>
+        <label for="message">Your Message:</label><br>
+        <textarea name="yourMessage" id="" cols="30" rows="10"></textarea><br>
+        <input type="submit" name="">
+    </form>
+
 </body>
 </html>
