--- a/HTML-Personal Site/index.html
+++ b/HTML-Personal Site/index.html
@@ -6,10 +6,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Darshan's Personal Site</title>
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Internal CSS -->
+    <style>
+
+        
+    </style>
+
 </head>
 
+<!-- Inline CSS -->
+<!-- <body style="background-color: #EAF6F6;"> -->
 <body>
-
+    
     <!-- <img src="https://pbs.twimg.com/profile_images/1508872100714475522/f9Gmbg6g_400x400.jpg" alt="Darshan_Profile_Image"> -->
 
     <!-- To crop image to circle visit website: crop-circle.onlineimage.co -->
@@ -22,7 +34,7 @@
             <td>
                 <h1>Darshan Ghorpade</h1>
                 <p><em>A Mathematician and <strong>Technology Enthusiast</strong>.</em></p>
-                <p>I am a Web Developer. I ❤️ coffee and my own beers.</p>
+                <p>I am a Web Developer. I ❤️ coffee and brew my own beers.</p>
             </td>
         </tr>
     </table>
