--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
   <title>TinDog</title>
 
+
+  <!-- Favicon -->
+  <link rel="icon" href="dog.ico" type="image/x-icon">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 
