--- a/TinDog/index.html
+++ b/TinDog/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8">
+  
+  <!-- Title tag -->
   <title>TinDog</title>
-
 
   <!-- Favicon -->
   <link rel="icon" href="dog.ico" type="image/x-icon">
