Add Javascript files

--- a/Introduction to Javascript/index.html
+++ b/Introduction to Javascript/index.html
@@ -13,6 +13,6 @@
     <!-- <script src="js/strings_methods.js"></script> -->
     <!-- <script src="js/challenge_01_change_case.js"></script> -->
     <!-- <script src="js/numbers.js"></script> -->
-    <script src="js/function.js"></script>
+    <!-- <script src="js/function.js"></script> -->
 </body>
 </html>
