--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     
-    <h1>Hello.</h1>
+    <h1 class="big-title margin-50">Hello.</h1>
+    <!-- <img src="drum.png" alt="drum-img"> -->
+    <a href="https://www.google.com">search</a>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
+
+    <input type="text" name="" id="">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js" charset="utf-8"></script>
